refactor(claude-code-enforcer): write, read and re-terminate in one place
- Baseline, HtmlReport and ReportIndex each created parent directories
  and wrote UTF-8 themselves. They now go through ReportFiles, which
  becomes the only class the architecture test lets write.
- The rules that read files around the per-build DocumentCache now read
  through ProjectFiles.text: context budget, document consistency,
  definition content, unique descriptions, OKF bundle, secret scan,
  import graph and the project layout.
- mcpConfigFormat no longer repeats mcpServersValid's report of a url
  that is not a string.
- FrontMatterFixer's hand-rolled separator detection is replaced by
  markdown-common's LineTerminators.matching. That method now also keeps
  a CR-only file on CR, as the fixer did.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LtDivkJsBxYAGTwsQdqQmK